<resources>
    <string name="app_name">Profuturo</string>
    <string name="texto_img_descripcion">Descripcion de texto</string>
    <string name="texto_usuario">Usuario</string>
    <string name="texto_contrasenia">Contraseña</string>
    <string name="title_activity_asesor">Asesor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_gerente">Gerente</string>
    <string name="title_activity_director">Director</string>
    <string name="texto_letra">L</string>
    <string name="texto_error_conexion">Error en conexión</string>
    <string name="texto_nav_inicio">Inicio</string>
    <string name="texto_nav_calculadora">Calculadora de retiro</string>
    <string name="texto_nav_biblioteca">Biblioteca</string>
    <string name="texto_nav_constancia_implicaciones">Asesoría de Implicaciones T</string>
    <string name="texto_nav_sucursales">Sucursales</string>
    <string name="texto_nav_asesores">Asesores</string>
    <string name="texto_nav_clientes">Clientes</string>
    <string name="texto_nav_asistencia">Asistencia</string>
    <string name="texto_nav_pendientes">Pendientes</string>
    <string name="texto_nav_cerrar_sesion">Cerrar sesión</string>
    <string name="texto_nav_reportes">Reportes</string>
    <string name="texto_nav_gerencias">Gerencias</string>
    <string name="texto_nombre">Nombre</string>
    <string name="texto_clientes">Clientes</string>
    <string name="texto_cusp">CUSP</string>
    <string name="texto_ingresar">Ingresar</string>
    <string name="texto_cliente">Cliente</string>
    <string name="texto_reporte_periodo">Reporte por periódo</string>
    <string name="texto_sin_conexion">No hay conexión a internet</string>
    <string name="btn_sin_cita">Cliente sin cita</string>
    <string name="btn_aplicar">Aplicar</string>
    <string name="btn_buscar">Buscar</string>
    <string name="texto_sucursal">Sucursal</string>
    <string name="texto_continuar">Continuar</string>
    <string name="texto_cancelar">Cancelar</string>
    <string name="texto_numero_empleado">Número de empleado</string>
    <string name="texto_nss">NSS</string>
    <string name="texto_curp">CURP</string>
    <string name="texto_fecha">Fecha</string>
    <string name="texto_saldo">Saldo</string>
    <string name="texto_numero_cuenta">Número de cuenta</string>
    <string name="texto_gerencias">Gerencias</string>
    <string name="texto_asesores">Asesores</string>
    <string name="pregunta1">¿Le brindaron asesoría del trámite que vino a realizar y aclararon sus dudas ?</string>
    <string name="pregunta2">¿Quedó satisfecho con respecto a la atención brindada en la sucursal</string>
    <string name="pregunta3">¿Es de su interes permanecer en AFORE Profuturo?</string>
    <string name="texto_observaciones">Observaciones</string>
    <string name="texto_telefono">Teléfono</string>
    <string name="texto_email">Email</string>
    <string name="texto_si">Si</string>
    <string name="texto_no">No</string>
    <string name="hint_ingresa_contenido">Ingresa texto...</string>
    <string name="texto_terminos_y_condiciones">Profuturo GNP S. A. de C. V. Afore con domicilio en Boulevard Adolfo López Mateos Nº 2009 Planta Baja, Colonia Los Alpes, Delegación Álvaro Obregón, C. P. 01010, México D. F., utlizará estos datos personales proporcionados por usted, con la finalidad de confirmar la información que nos proporciona como Titular de los Datos y realizar la administración de su cuenta individual de ahorro para el retiro en apego a la Lay de los Sistemas de Ahorro para el Retiro, IMSS, ISSSTE, CONSAR. Asimismo, usted afirma que tiene el conocimiento de sus beneficiarios y referencias personales para proporcionar algunos datos a Profuturo. Si desea conocer mayor detalle de los fines para los cuales serán utilizados sus dato, así como ejercer sus derechos ARCO, puede consultar nuestro Aviso de Privacidad Integral a través de www.profuturo.mx , solicitarlo en cualquiera de nuestras sucursales, o a través del área de Servicio a Clientes: teléfonos D. F. 5809-6555 Interior sin costo: 01800 7155555 o al correo: servicioaclientes@profuturo.com.mx. Agosto 2015.</string>
    <string name="texto_sucursales">Sucursales</string>
    <string name="texto_enviar_email">Enviar a email</string>
    <string name="texto_asistencia">Asistencia</string>
    <string name="texto_horario">Horario de Atención</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar"></string>
    <string name="error_conexion">Error de conexión</string>
    <string name="error_json">Error en json</string>
    <string name="error_datos">Error datos</string>
    <string name="error_datos_vacios">Datos vacios</string>
    <string name="error_fechas_vacias">Fechas vacias</string>
    <string name="error_en_documento">Error en documento</string>
    <string name="error_en_documento_frente">Error documento Frente</string>
    <string name="error_en_documento_vuelta">Error documento Reverso</string>
    <string name="error_en_documento_ambos_lados">Error documentos</string>
    <string name="error_en_documento_vacio">No existe un documento, debes tomar la captura del documento</string>
    <string name="error_en_documento_sin_datos">No existe un documento, debes tomar la captura de la parte frontal y parte trasera del documento</string>
    <string name="error_email_incorrecto">Error en email</string>
    <string name="msj_error_documento">No existe un documento(IFE o INE), favor de tomar captura</string>
    <string name="msj_error_json">Los datos no se han podido formar</string>
    <string name="msj_error_fechas">Por favor, rellena los campos de fecha</string>
    <string name="msj_error_datos_vacios">Debes rellenar todos los campos</string>
    <string name="msj_error_email">El email no es valido, favor de verificar</string>
    <string name="msj">Mensaje</string>
    <string name="msj_titulo_aviso">Aviso</string>
    <string name="msj_contenido_aviso">¿Deseas salir de reportes de asitencia, serás dirigido al inicio ?</string>
    <string name="msj_titulo_seleccion_spinner">Sin selección de ID</string>
    <string name="msj_titulo_espera">Cargando datos...</string>
    <string name="msj_titulo_limpiar">Contenido limpio</string>
    <string name="msj_titulo_menu">Uso de menu</string>
    <string name="msj_contenido_menu">Por favor, utiliza el menú para poder cambiar de sección</string>
    <string name="msj_titulo_firma">Firma vacia</string>
    <string name="msj_titulo_sin_coordenadas">Error en coordenadas</string>
    <string name="msj_titulo_confirmacion">Confirmación</string>
    <string name="msj_cotentido_sin_coordenadas">No existen una ubicación, activa tu GPS.</string>
    <string name="msj_contenido_vacio_firma">Se requiere una firma, favor de firmar</string>
    <string name="msj_contenido_envio">Se enviara los datos de </string>
    <string name="msj_contenido_spinner">Debes ingresar un </string>
    <string name="msj_contenido_sin_spinner">Debes seleccionar el tipo de campo a solicitar</string>
    <string name="msj_espera">Cargando contenido, espere por favor...</string>
    <string name="msj_salida">Deseas regresar al inicio</string>
    <string name="msj_contenido_limpio">El contenido se ha limpiado</string>
    <string name="msj_esperando">Espere un momento</string>
    <string name="msj_espera_camara">Por favor espere un momento, se esta preparando la cámara para hacer captura de documento</string>
    <string name="msj_verificando">Se están verificando los datos</string>
    <string name="msj_sin_internet_continuar_proceso">No tienes conexión a internet, pero puedes continuar con el proceso, cuando exista conexión a internet se enviaran los datos</string>
    <string name="msj_error_conexion_firma">No hay conexión a internet, verifica tu conexión y vuelve a intentar</string>
    <string name="titulo_espera">Espere un momento</string>
    <string name="texto_pendientes">Pendientes</string>
    <string name="texto_envios_pendientes">Lista de envios pendientes</string>
    <string name="texto">texto</string>
    <string name="msj_email_vacio">Ingresa email valido</string>
    <string name="titulo_carga_datos">Cargando datos</string>
    <string name="msj_carga_datos">Por favor espere un momento...</string>
    <string name="msj_error_datos_servicio">Se ha encontrado un problema, con los datos a procesar</string>
    <string name="msj_error_conexion_internet">Se ha encontrado un problema, debes revisar tu conexion a internet</string>
    <string name="msj_error_conexion_internet_menu">Al parecer no tienes internet, debes revisar tu conexion a internet, para poder visualizar las demas secciones</string>
    <string name="titulo_error">Error</string>
    <string name="titulo_error_datos">Error en datos</string>
    <string name="msj_error_datos">Lo sentimos ocurrio un error al formar los datos</string>
    <string name="titulo_activacion_gps">No se pudo acceder a las coordenadas de su localización</string>
    <string name="msj_activacion_gps">¿Desea habílitar su localización?</string>
    <string name="titulo_salida_app">Alerta de mensaje</string>
    <string name="msj_salida_app">¿Estás seguro que deseas salir de la aplicación?</string>
    <string name="titulo_regreso_inicio">Regreso</string>
    <string name="msj_regreso_inicio">Serás direccionado al Inicio</string>
    <string name="titulo_confirmacion">Confirmar</string>
    <string name="msj_confirmacion">¿Estás seguro que deseas salir?</string>
    <string name="msj_error_conexion">Por favor, revisa tu conexión a internet</string>
    <string name="msj_error_conexion_sin_proceso">Por favor, revisa tu conexión a internet, lamentablemente no es posible continuar el proceso de implicaiones, hasta tener conexión a internet</string>
    <string name="titulo_cancelacion_implicaciones">Cancelar proceso</string>
    <string name="msj_cancelacion_implicaciones">¿Deseas cancelar el proceso de implicaiones?</string>
    <string name="titulo_no_existe_parametro">Error en datos</string>
    <string name="msj_no_existe_parametro">Lo sentimos, hace falta datos para realizar el tramite</string>
    <string name="titulo_modo_avion_aviso">Alerta de Modo Avión</string>
    <string name="msj_modo_avion_aviso">Advertencia, se encuentra activado el modo avión en tu dispositivo, por favor desactivalo, para tener un mejor rendimineto</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="label_cancel">label_cancel</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>
    <string name="msj_cancelar">¿Estas de acuerdo que deseas salir?</string>
    <string name="msj_cancelar_1133">¿Estás de acuerdo en cancelar el proceso 1.1.3.3 de implicaciones?</string>
    <string name="msj_cancelar_1134">¿Estás de acuerdo en cancelar el proceso 1.1.3.4 de implicaciones?</string>
    <string name="msj_cancelar_1135">¿Estás de acuerdo en cancelar el proceso 1.1.3.5 de implicaciones?</string>
    <string name="msj_cancelar_1136">¿Estás de acuerdo en cancelar el proceso 1.1.3.6 de implicaciones?</string>
    <string name="msj_cancelar_1137">¿Estás de acuerdo en cancelar el proceso 1.1.3.7 de implicaciones?</string>
    <string name="msj_cancelar_1138">¿Estás de acuerdo en cancelar el proceso 1.1.3.8 de implicaciones?</string>
    <string name="msj_regresar_inicio">¡Estás de acuerdo en regresar al inicio?</string>
    <string name="msj_regresar_proceso">¿Estás de acuerdo en regresar al inicio del proceso de implicaciones? esto implica que terminaras con el actual proceso</string>
    <string name="msj_regreso_proceso">Serás dirigido al proceso de implicaciones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_frente">Frente</string>
    <string name="texto_reverso">Reverso</string>
</resources>