<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.airmovil.profuturo.ti.retencion.gerenteFragmento.DatosAsesor">
    <!-- TODO: Contenido general -->
    <LinearLayout style="@style/contenedorGeneralVertical">
        <!-- TODO: Titulo datos del asesor -->
        <TextView style="@style/tituloProceso" android:text="Datos Asesor"/>
        <!-- TODO: Contenedor de datos-->
        <LinearLayout style="@style/contenedorDatos">
            <!-- TODO: Nombre del asesor y dato a mostrar-->
            <TextView style="@style/tituloDato"  android:text="@string/texto_nombre" />
            <TextView style="@style/datoMuestra" android:id="@+id/gfda_tv_nombre_usuario" android:text="Gerente"/>
            <!-- TODO: Numero de empleado y dato a mostrar-->
            <TextView style="@style/tituloDato" android:text="@string/texto_numero_empleado" />
            <TextView style="@style/datoMuestra" android:id="@+id/gfda_tv_numero_empleado" android:text="2222"/>
            <!-- TODO: Sucursal y dato a mostrar-->
            <TextView style="@style/tituloDato" android:text="@string/texto_sucursal" />
            <TextView style="@style/datoMuestra" android:id="@+id/gfda_tv_sucursal" android:text="Sucursal sur"/>
        </LinearLayout>
        <!-- TODO: boton continuar -->
        <Button android:id="@+id/gfda_btn_continuar" style="@style/btnContinuar" />

        <!-- TODO: boton continuar -->
        <Button android:id="@+id/gfda_btn_cancelar" style="@style/btnCancelar" />
    </LinearLayout>
</ScrollView>